Fix usage of deprecated URL constructor